WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235786
css/motion/animation/offset-rotate-composition.html has failures
https://bugs.webkit.org/show_bug.cgi?id=235786
Summary
css/motion/animation/offset-rotate-composition.html has failures
Antoine Quint
Reported
2022-01-28 07:19:12 PST
css/motion/animation/offset-rotate-composition.html has 23 failures, we need to investigate and fix them.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-04 07:22:53 PST
<
rdar://problem/88487956
>
Antoine Quint
Comment 2
2022-07-01 00:35:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1980
EWS
Comment 3
2022-07-01 04:50:38 PDT
Committed
252036@main
(777aaf066956): <
https://commits.webkit.org/252036@main
> Reviewed commits have been landed. Closing PR #1980 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug