css/motion/animation/offset-rotate-composition.html has failures https://bugs.webkit.org/show_bug.cgi?id=235786 <rdar://88487956>

Reviewed by Antti Koivisto.

We should only return the from and to values if we're dealing with a discrete animation, since otherwise
we could be dealing with an additive animation.

* LayoutTests/imported/w3c/web-platform-tests/css/motion/animation/offset-rotate-composition-expected.txt:
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):

Canonical link: https://commits.webkit.org/252036@main