Source/WebCore/animation/CSSPropertyAnimation.cpp
@@ -597,11 +597,10 @@ static inline std::optional<FontSelectionValue> blendFunc(std::optional<FontSele
 
 static inline OffsetRotation blendFunc(const OffsetRotation& from, const OffsetRotation& to, const CSSPropertyBlendingContext& context)
 {
-    if (!context.progress)
-        return from;
-
-    if (context.progress == 1)
-        return to;
+    if (context.isDiscrete) {
+        ASSERT(!context.progress || context.progress == 1.0);
+        return context.progress ? to : from;
+    }
 
     ASSERT(from.hasAuto() == to.hasAuto());
 
